# cl-syslog

./: CMakeLists.txt
except/: CMakeLists.txt  base_exception.cpp  classert.cpp  classert.h
syslog/: CMakeLists.txt  common.h  manager.cpp  manager.h  message.h  output.h  output_common.cpp  output_common.h  output_file.cpp  output_file.h  output_stream.cpp  output_stream.h  output_syslog.h  scope_profile.cpp  scope_profile.h  syslog.h
